[package]
name = "tls13tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
x25519-dalek = { version = "2", features = ["static_secrets"] }
pretty_assertions = "1.4.0"
log = "0.4.21"
env_logger = "0.11.3"
sha2 = "0.10.8"
hkdf = "0.12.4"
chacha20poly1305 = "0.10.1"

# Library target for fuzzing
[lib]
bench = false